--- a/mystyle.css
+++ b/mystyle.css
@@ -99,7 +99,7 @@
 }
 
 
-/* other css */
+/* sivun ulkoasu */
 
 body {
     background-color: rgb(255, 255, 255);
@@ -144,7 +144,7 @@ body {
     max-width: 600px;
     height: 100%;
     margin: 0 auto;
-    background: #CCC
+    background: #CCC;
 }
 
 
@@ -158,12 +158,13 @@ footer {
 h1 {
     color: (0, 0, 0);
     font-family: 'Verdana', sans-serif;
-    font-size: 20px
+    font-size: 20px;
 }
 h2 {
     color: (0, 0, 0);
     font-family: 'Verdana', sans-serif;
-    font-size: 14px font-style: bold;
+    font-size: 14px;
+    font-style: bold;
 }
 p {
     color: (0, 0, 0);
