--- a/mystyle.css
+++ b/mystyle.css
@@ -104,6 +104,7 @@
 body {
     background-color: rgb(255, 255, 255);
     background-image: url("pastelbg.jpg");
+    background-size: cover;
     font-family: 'Verdana', sans-serif;
 }
 
@@ -123,7 +124,11 @@ body {
 }
 
 .image {
-    width: 50%;
+    width: 30%;
+}
+
+.kalenteri {
+    width: 30%;
 }
 
 .h_iframe {
@@ -156,15 +161,18 @@ footer {
     font-size: 12px;
 }
 h1 {
-    color: (0, 0, 0);
+    color: white;
     font-family: 'Verdana', sans-serif;
-    font-size: 20px;
+    font-size: 30px;
+    font-style: bold;
+    text-align: center;
 }
 h2 {
     color: (0, 0, 0);
     font-family: 'Verdana', sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     font-style: bold;
+    text-align: center;
 }
 p {
     color: (0, 0, 0);
